# ics_vtimezones

./: .gitignore  MAINTAIN.md  README.md  README.rst  Unicode License Agreement.txt  pyproject.toml  update.sh  update_windows.py  update_zoneinfo.py
src/ics_vtimezones/: __config__.py  __init__.py
src/ics_vtimezones/data/: windows_zone_mapping.json  zoneinfo_index.json
src/ics_vtimezones/data/zoneinfo/: CET.ics  CST6CDT.ics  EET.ics  EST.ics  EST5EDT.ics  HST.ics  MET.ics  MST.ics  MST7MDT.ics  PST8PDT.ics  WET.ics
src/ics_vtimezones/data/zoneinfo/Africa/: Abidjan.ics  Accra.ics  Algiers.ics  Bissau.ics  Cairo.ics  Casablanca.ics  Ceuta.ics  El_Aaiun.ics  Johannesburg.ics  Juba.ics  Khartoum.ics  Lagos.ics  Maputo.ics  Monrovia.ics  Nairobi.ics  Ndjamena.ics  Sao_Tome.ics  Tripoli.ics  Tunis.ics  Windhoek.ics
src/ics_vtimezones/data/zoneinfo/America/: Adak.ics  Anchorage.ics  Araguaina.ics  Asuncion.ics  Atikokan.ics  Bahia.ics  Bahia_Banderas.ics  Barbados.ics  Belem.ics  Belize.ics  Blanc-Sablon.ics  Boa_Vista.ics  Bogota.ics  Boise.ics  Cambridge_Bay.ics  Campo_Grande.ics  Cancun.ics  Caracas.ics  Cayenne.ics  Chicago.ics  Chihuahua.ics  Costa_Rica.ics  Creston.ics  Cuiaba.ics  Curacao.ics  Danmarkshavn.ics  Dawson.ics  Dawson_Creek.ics  Denver.ics  Detroit.ics  Edmonton.ics  Eirunepe.ics  El_Salvador.ics  Fort_Nelson.ics  Fortaleza.ics  Glace_Bay.ics  Goose_Bay.ics  Grand_Turk.ics  Guatemala.ics  Guayaquil.ics  (+65 more)
src/ics_vtimezones/data/zoneinfo/Antarctica/: Casey.ics  Davis.ics  DumontDUrville.ics  Macquarie.ics  Mawson.ics  Palmer.ics  Rothera.ics  Syowa.ics  Troll.ics  Vostok.ics
src/ics_vtimezones/data/zoneinfo/Asia/: Almaty.ics  Amman.ics  Anadyr.ics  Aqtau.ics  Aqtobe.ics  Ashgabat.ics  Baku.ics  (+70 more)
(+164 files in other folders)
