[tool.poetry]
name = "ics_vtimezones"
version = "2020.1"
description = "iCalendar vTimezone Data"
authors = ["Niko Fink <icspy@niko.fink.bayern>"]
license = "CC0-1.0"
readme = "README.md"
homepage = "https://pypi.org/project/ics_vtimezones/"
repository = "https://github.com/N-Coder/ics_vtimezones"
documentation = "https://icspy.readthedocs.io/en/stable/"
keywords = ["ics", "icalendar", "rfc5545", "timezone", "vtimezone"]

[tool.poetry.dependencies]
python =                     "^3.6"
importlib_resources =        "^1.4"

[tool.poetry.dependencies.ics]
optional = true
# extra = update
# A) via PyPi
#version = "^0.8.0"
# B) via GitHub
git = "https://github.com/C4ptainCrunch/ics.py.git"
branch = "timezones"
# C) via local filesystem
#path = "../ics.py"

[tool.poetry.extras]
update = ["ics"]

[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.masonry.api"
