[tool.poetry]
name = "ics_vtimezones"
version = "2020.2"
description = "iCalendar vTimezone Data"
authors = ["Niko Fink <icspy@niko.fink.bayern>"]
license = "CC0-1.0"
readme = "README.md"
homepage = "https://pypi.org/project/ics_vtimezones/"
repository = "https://github.com/N-Coder/ics_vtimezones"
documentation = "https://icspy.readthedocs.io/en/stable/"
keywords = ["ics", "icalendar", "rfc5545", "timezone", "vtimezone"]

[tool.poetry.dependencies]
python =                     "^3.7"
importlib_resources =        ">=1.4"

[tool.poetry.dependencies.ics]
optional = true
version = "^0.8.0.dev0"

[tool.poetry.extras]
update = ["ics"]

[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.masonry.api"
